unpackaged/main/default/objects/Score_Factors__c/Score_Factors__c.object-meta.xml
<CustomObject>
    <label>Score Factors</label>
    <nameField>
        <label>Score Factors Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Score Factors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>