unpackaged/main/default/objects/Score_Factors__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Score Factors</relationshipLabel>
    <relationshipName>Score_Factors</relationshipName>
    <type>Lookup</type>
</CustomField>