unpackaged/main/default/objects/Score_Factors__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>genesis__Applications__c</referenceTo>
    <relationshipLabel>Score Factors</relationshipLabel>
    <relationshipName>Score_Factors</relationshipName>
    <type>Lookup</type>
</CustomField>