unpackaged/main/default/objects/Score_Factors__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>